// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pricing Box block saved block HTML shouldn't change 1`] = `
<BlockContentProvider
  innerBlocks={Array []}
>
  <div
    className="wp-block-ugb-pricing-box ugb-pricing-box ugb-pricing-box--v2 ugb-pricing-box--columns-1 ugb-pricing-box--design-design className"
  >
    <div
      className="ugb-pricing-box__item ugb--shadow-1"
      style={
        Object {
          "borderRadius": 6,
        }
      }
    >
      <div
        className="ugb-pricing-grid__image"
      >
        <img
          alt="pricingBoxTitle"
          src="imageURL"
        />
      </div>
      <Unknown
        className="ugb-pricing-box__title"
        format="string"
        style={
          Object {
            "color": "#123456",
          }
        }
        tagName="h3"
        value="pricingBoxTitle"
      />
      <div
        className="ugb-pricing-box__price-wrapper"
      >
        <div
          className="ugb-pricing-box__price-line"
        >
          <Unknown
            className="ugb-pricing-box__price-prefix"
            format="string"
            style={
              Object {
                "color": "#123456",
              }
            }
            tagName="span"
            value="pricePrefix"
          />
          <Unknown
            className="ugb-pricing-box__price"
            format="string"
            style={
              Object {
                "color": "#123456",
              }
            }
            tagName="span"
            value="price"
          />
          <Unknown
            className="ugb-pricing-box__price-suffix"
            format="string"
            style={
              Object {
                "color": "#123456",
              }
            }
            tagName="span"
            value="priceSuffix"
          />
        </div>
        <Unknown
          className="ugb-pricing-box__subprice"
          format="string"
          style={
            Object {
              "color": "#123456",
            }
          }
          tagName="p"
          value="perMonthLabel"
        />
      </div>
      <Unknown
        backgroundColor="#123456"
        borderRadius={2}
        color="#123456"
        design="buttonDesign"
        icon="buttonIcon"
        newTab={true}
        size="size"
        text="buttonText"
        url="url"
      />
      <Unknown
        className="ugb-pricing-box__description"
        format="string"
        style={
          Object {
            "color": "#123456",
          }
        }
        tagName="p"
        value="featureList"
      />
    </div>
  </div>
</BlockContentProvider>
`;

exports[`Pricing Box block saved default block HTML shouldn't change 1`] = `
<BlockContentProvider
  innerBlocks={Array []}
>
  <div
    className="wp-block-ugb-pricing-box ugb-pricing-box ugb-pricing-box--v2 ugb-pricing-box--columns-2 ugb-pricing-box--design-basic"
  >
    <div
      className="ugb-pricing-box__item"
      style={
        Object {
          "borderRadius": undefined,
        }
      }
    >
      <Unknown
        className="ugb-pricing-box__title"
        format="string"
        style={
          Object {
            "color": undefined,
          }
        }
        tagName="h3"
        value="Title"
      />
      <div
        className="ugb-pricing-box__price-wrapper"
      >
        <div
          className="ugb-pricing-box__price-line"
        >
          <Unknown
            className="ugb-pricing-box__price-prefix"
            format="string"
            style={
              Object {
                "color": undefined,
              }
            }
            tagName="span"
            value="$"
          />
          <Unknown
            className="ugb-pricing-box__price"
            format="string"
            style={
              Object {
                "color": undefined,
              }
            }
            tagName="span"
            value="9"
          />
          <Unknown
            className="ugb-pricing-box__price-suffix"
            format="string"
            style={
              Object {
                "color": undefined,
              }
            }
            tagName="span"
            value=".00"
          />
        </div>
        <Unknown
          className="ugb-pricing-box__subprice"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="p"
          value="Description"
        />
      </div>
      <Unknown
        borderRadius={4}
        design="basic"
        newTab={false}
        size="normal"
        text="Button text"
        url=""
      />
      <Unknown
        className="ugb-pricing-box__description"
        format="string"
        style={
          Object {
            "color": undefined,
          }
        }
        tagName="p"
        value="Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block."
      />
    </div>
    <div
      className="ugb-pricing-box__item"
      style={
        Object {
          "borderRadius": undefined,
        }
      }
    >
      <Unknown
        className="ugb-pricing-box__title"
        format="string"
        style={
          Object {
            "color": undefined,
          }
        }
        tagName="h3"
        value="Title"
      />
      <div
        className="ugb-pricing-box__price-wrapper"
      >
        <div
          className="ugb-pricing-box__price-line"
        >
          <Unknown
            className="ugb-pricing-box__price-prefix"
            format="string"
            style={
              Object {
                "color": undefined,
              }
            }
            tagName="span"
            value="$"
          />
          <Unknown
            className="ugb-pricing-box__price"
            format="string"
            style={
              Object {
                "color": undefined,
              }
            }
            tagName="span"
            value="29"
          />
          <Unknown
            className="ugb-pricing-box__price-suffix"
            format="string"
            style={
              Object {
                "color": undefined,
              }
            }
            tagName="span"
            value=".00"
          />
        </div>
        <Unknown
          className="ugb-pricing-box__subprice"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="p"
          value="Description"
        />
      </div>
      <Unknown
        borderRadius={4}
        design="basic"
        newTab={false}
        size="normal"
        text="Button text"
        url=""
      />
      <Unknown
        className="ugb-pricing-box__description"
        format="string"
        style={
          Object {
            "color": undefined,
          }
        }
        tagName="p"
        value="Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block."
      />
    </div>
  </div>
</BlockContentProvider>
`;
